--- a/puppet/Gemfile
+++ b/puppet/Gemfile
@@ -14,6 +14,7 @@ gem 'puppet_readme_generator'
 
 # rspec must be v2 for ruby 1.8.7
 if RUBY_VERSION >= '1.8.7' && RUBY_VERSION < '1.9'
+  gem 'rspec-retry'
   gem 'rspec', '~> 2.0'
   gem 'rake', '~> 10.0'
 else
