--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "puppet/modules/puppet-module-prometheus"]
 	path = puppet/modules/prometheus
 	url = https://github.com/jetstack/puppet-module-prometheus.git
+[submodule "puppet/modules/puppet-module-aws_ebs"]
+	path = puppet/modules/aws_ebs
+	url = https://github.com/jetstack/puppet-module-aws_ebs.git
