--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "puppet/modules/puppet-module-tarmak"]
 	path = puppet/modules/tarmak
 	url = https://github.com/jetstack/puppet-module-tarmak.git
+[submodule "puppet/modules/puppet-module-vault_client"]
+	path = puppet/modules/vault_client
+	url = https://github.com/jetstack/puppet-module-vault_client.git
