--- a/terraform/amazon/templates/instance_pools/instance_pool_instance.tf.template
+++ b/terraform/amazon/templates/instance_pools/instance_pool_instance.tf.template
@@ -75,6 +75,7 @@ resource "aws_launch_configuration" "{{.TFName}}" {
     device_name = "{{.Device}}"
     volume_size = {{.Size}}
     volume_type = "{{.Type}}"
+    encrypted  = "true"
   }
 {{ end -}}
 
@@ -222,6 +223,8 @@ resource "aws_ebs_volume" "{{$instancePool.TFName}}_{{.Name}}" {
   availability_zone = "${element(var.availability_zones, count.index)}"
   size              = "${var.{{$instancePool.TFName}}_{{.Name}}_volume_size}"
   type              = "${var.{{$instancePool.TFName}}_{{.Name}}_volume_type}"
+
+  encrypted  = "true"
 
   tags {
     Name        = "${data.template_file.stack_name.rendered}-{{$instancePool.DNSName}}-{{.Name}}-${count.index+1}"
