--- a/terraform/amazon/templates/vault_instances.tf.template
+++ b/terraform/amazon/templates/vault_instances.tf.template
@@ -95,6 +95,8 @@ resource "aws_ebs_volume" "vault" {
   size              = "${var.vault_data_size}"
   availability_zone = "${element(var.availability_zones, count.index % length(var.availability_zones))}"
 
+  encrypted  = "true"
+
   tags {
     Name        = "${data.template_file.stack_name.rendered}-vault-${count.index+1}"
     Environment = "${var.environment}"
